<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <TableRow>
            <TextView
                android:text="@string/description"
                android:layout_marginEnd="10dp"
                android:gravity="end"/>

            <EditText
                android:id="@+id/etDesc"
                android:hint="@string/desc"
                android:singleLine="true"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/date"
                android:gravity="end"
                android:layout_marginEnd="10dp"/>
            <Button
                android:id="@+id/btnDate"
                android:text="Date" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/amount"
                android:gravity="end"
                android:layout_marginEnd="10dp"/>

            <EditText
                android:id="@+id/etAmount"
                android:numeric="decimal"
                android:singleLine="true"
                android:hint="@string/amt"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/type"
                android:gravity="end"
                android:layout_marginEnd="10dp"/>
            <Switch
                android:layout_column="1"
                android:id="@+id/swType"
                android:layout_width="wrap_content"
                android:textOn="@string/swexp"
                android:textOff="@string/swinc"
                android:layout_gravity="start"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/currency"
                android:gravity="end"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/btnUnit"
                android:layout_column="1"
                android:text="@string/wakandadollar"
                android:textColor="@color/greenish_grey"
                android:clickable="true"
                android:textSize="18sp"
                android:layout_gravity="center"/>
        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:text="@string/save"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp" />


</LinearLayout>
