<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

        <TextView
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homecurrency"
            android:textSize="24sp"
            android:background="@color/blueteal"
            android:textColor="@color/tab_grey"/>

        <Button
            android:padding="10dp"
            android:id="@+id/curHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usd"
            android:textSize="20sp"
            android:textColor="@color/lightbluegrey"
            android:inputType="none"
            android:clickable="true"
            android:layout_gravity="center_horizontal"
            style="@style/ButtonStyleNone"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:paddingStart="10dp"
            android:text="@string/current"
            android:textSize="24sp"
            android:textColor="@color/tab_grey"
            android:background="@color/blueteal"/>

        <Button
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/curAway"
            android:clickable="true"
            android:text="@string/eur"
            android:textSize="20sp"
            android:inputType="none"
            android:textColor="@color/lightbluegrey"
            style="@style/ButtonStyleNone"/>

        <Button
            android:layout_marginTop="60dp"
            android:id="@+id/btnSettings"
            android:text="@string/save"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>